--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .bg {
-  background-image: url("./greenbg.svg");
+  /* background-image: url("./greenbg.svg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .sun {
@@ -63,7 +63,7 @@ h1 {
   border-radius: 25px;
   box-shadow: 10px 10px 5px grey;
   width: 300px;
-  height: 400px;
+  height: 530px;
   margin: auto;
 }
 
@@ -96,11 +96,12 @@ h1 {
   background-color: #4caf50; /* Green */
   border: none;
   color: white;
-  padding: 16px 32px;
+  margin: auto;
+  padding: 0px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 18px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
@@ -108,7 +109,7 @@ h1 {
 
 .button1 {
   background-color: white;
-  color: black;
+  color: #4caf50;
   border: 2px solid #4caf50;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
